--- a/cs/final.css
+++ b/cs/final.css
@@ -1,10 +1,29 @@
 body{
-    background-color: grey;
+    background-color: black;
     font-family: "Roboto Condensed","HelveticaNeue-Light", "Helvetica Neue Light", "Helvetica Neue", Helvetica, Arial,
     "Lucida Grande", sans-serif;
     font-weight: 300;
-
-
-
-
+}
+#wrapper{
+    width: 960px;
+    height: 1553px;
+    margin-left: auto;
+    margin-right: auto;
+    background-color: silver;
+}
+#header{
+    background-color: grey;
+}
+nav li{
+    float: right;
+    text-align: center;
+    padding: 14px 16px;
+}
+nav ul{
+    list-style-type: none;
+    margin: 0;
+    overflow: hidden;
+}
+.link{
+    padding-top: 30px;
 }
