--- a/cs/final.css
+++ b/cs/final.css
@@ -84,3 +84,9 @@ nav ul{
     font-size: 13px;
     line-height: 23px;
 }
+#work h3{
+    text-align: center;
+    padding-top: 30px;
+    font-size: 30px;
+    margin-top: 40px;
+}
