--- a/cs/homepage.css
+++ b/cs/homepage.css
@@ -1,16 +1,131 @@
 body {
     background-color: black;
-    font-family: "Roboto Condensed", "HelveticaNeue-Light", "Helvetica Neue Light", "Helvetica Neue", Helvetica, Arial, "Lucida Grande", sans-serif;
+    font-family: "Roboto Condensed","HelveticaNeue-Light", "Helvetica Neue Light", "Helvetica Neue", Helvetica, Arial,
+    "Lucida Grande", sans-serif;
     font-weight: 300;
 }
-header{
+#wrapper {
+    width: 960px;
+    height: 1200px;
+    margin-left: auto;
+    margin-right: auto;
     background-color: silver;
-    height: 120px;
+}
+#header{
+    background-color: silver;
     outline: 1px solid #000;
     outline-offset: -4px;
+    height: 100px;
 }
-header::after {
-    content: '';
-    display: block;
+
+#header li{
+    display: inline
+}
+
+#hello a{
+    text-decoration:none;
+    color: black;
+}
+nav ul {
+    list-style-type: none;
+    margin: 0;
+    overflow: hidden;
+}
+nav li {
+    float: right;
+    text-align: center;
+    padding: 14px 16px;
+}
+.link{
+    padding-top: 30px;
+}
+#content {
+    width: 541px;
+    padding-left: 40px;
+    padding-top: 50px;
+    float: left;
     clear: both;
+    background-color: silver;
+}
+#content p{
+    line-height: 1.6;
+}
+
+body h1 {
+    font-size: 42px;
+    line-height: 65px;
+}
+
+body h2 {
+    font-size: 33px;
+    line-height: 52px;
+}
+
+body h3 {
+    font-size: 26px;
+    line-height: 41px;
+}
+
+body h4 {
+    font-size: 20px;
+    line-height: 33px;
+}
+
+body h5 {
+    font-size: 16px;
+    line-height: 27px;
+}
+
+body h6 {
+    font-size: 13px;
+    line-height: 23px;
+}
+
+#sidebar {
+    padding-top: 40px;
+    padding-right: 6px;
+    padding-bottom: 52px;
+    width: 367px;
+    float: left;
+    line-height: 1.6;
+    background-color: silver;
+}
+.placeholder{
+    height: 450px;
+    width: 500px;
+    padding-bottom: 50px;
+}
+#header img{
+    height: 100px;
+    width: 75px;
+    padding-bottom: 50px;
+    float: left;
+    clear: both;
+}
+#content img{
+    height: 450px;
+    width: 500px;
+    padding-bottom: 50px;
+}
+#subinfo div {
+    width: 250px;
+    height: 50px;
+    padding-left: 50px;
+    float: left;
+    font-size: 13px;
+    line-height: 23px;
+}
+#footer {
+    clear: both;
+    position: fixed;
+    bottom: 0;
+    width: 960px;
+    height: 50px;
+    background-color: silver;
+    color: black;
+    text-align: right;
+}
+#footerinfo{
+    padding-top: 20px;
+    padding-right: 24px;
 }
